--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 
 SECRET_KEY=jwtapi$mongodb
 
-databaseurl="mongodb+srv://ruttikas:DolpcTrLM2XRHLdH@interview-tasks.pfj4vlt.mongodb.net/mindlense-task?retryWrites=true&w=majority&appName=interview-tasks"
+databaseurl="mongodb+srv://ruttikashrirao:OnlineProjectManagement@cluster0.ngyjvvz.mongodb.net/"
 
 port=8000
